# Zehnex-Pypi

./: LICENSE  MANIFEST.in  PYPI_UPLOAD.txt  README.md  index.html  pyproject.toml  test_zehnex.py  zehnex.rar
