[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zehnex"
version = "1.1.0"
authors = [
    { name = "Zehnex Team", email = "zehnex@example.com" }
]
description = "Zehnex: Next-Gen Hybrid Telegram Framework (Aiogram + Telebot style)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = [
    "telegram", "bot", "framework", "async", "zehnex", "aiogram", "telebot",
    "youtube-downloader", "currency", "wikipedia", "qrcode", "pdf"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.27.0",
    "yt-dlp>=2024.1.0",
    "reportlab>=4.0.0",
    "qrcode[pil]>=7.4.2",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/zehnex-py/zehnex"

[tool.setuptools.packages.find]
where = ["."]
include = ["zehnex*"]
